force-app/main/default/objects/Allocation_Plan__c/Allocation_Plan__c.object-meta.xml
<CustomObject>
    <label>Allocation Plan</label>
    <pluralLabel>Allocation Plans</pluralLabel>
    <nameField><label>Allocation Plan Name</label><type>AutoNumber</type><displayFormat>AP-{0000}</displayFormat></nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>