force-app/main/default/objects/Allocation_Plan__c/fields/Coverage_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Percentage__c</fullName><label>Coverage Percentage</label><precision>18</precision><scale>2</scale><type>Number</type>
</CustomField>