force-app/main/default/objects/Allocation_Plan__c/fields/Estimated_ETA__c.field-meta.xml
<CustomField>
    <fullName>Estimated_ETA__c</fullName><label>Estimated ETA</label><length>255</length><type>Text</type>
</CustomField>