force-app/main/default/objects/Allocation_Plan__c/fields/Incident__c.field-meta.xml
<CustomField>
    <fullName>Incident__c</fullName>
    <label>Incident</label>
    <referenceTo>Emergency_Incident__c</referenceTo>
    <relationshipLabel>Allocation Plans</relationshipLabel>
    <relationshipName>AllocationPlans</relationshipName>
    <type>Lookup</type>
</CustomField>