force-app/main/default/objects/Allocation_Plan__c/fields/Modification_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Modification_Instructions__c</fullName>
    <label>Modification Instructions</label>
    <length>32768</length><type>LongTextArea</type><visibleLines>4</visibleLines>
</CustomField>