force-app/main/default/objects/Allocation_Plan__c/fields/Recommendation_Reason__c.field-meta.xml
<CustomField><fullName>Recommendation_Reason__c</fullName><label>Recommendation Reason</label><length>32768</length><type>LongTextArea</type><visibleLines>4</visibleLines></CustomField>