force-app/main/default/objects/Allocation_Plan__c/fields/Risk_Score__c.field-meta.xml
<CustomField><fullName>Risk_Score__c</fullName><label>Risk Score</label><length>40</length><type>Text</type></CustomField>