force-app/main/default/objects/Allocation_Plan__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Proposed</fullName><default>true</default><label>Proposed</label></value><value><fullName>Approved</fullName><default>false</default><label>Approved</label></value><value><fullName>Modified</fullName><default>false</default><label>Modified</label></value><value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value><value><fullName>Executed</fullName><default>false</default><label>Executed</label></value><value><fullName>Superseded</fullName><default>false</default><label>Superseded</label></value></valueSetDefinition></valueSet>
</CustomField>