force-app/main/default/objects/Allocation_Plan__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Version</label>
    <precision>18</precision><scale>0</scale><type>Number</type>
</CustomField>